load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

# gazelle:prefix github.com/lvjp/dummy
gazelle(name = "gazelle")

# Add a rule to call gazelle and pull in new go dependencies.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

buildifier(name = "buildifier")

go_library(
    name = "dummy_lib",
    srcs = ["main.go"],
    importpath = "github.com/lvjp/dummy",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "@org_golang_x_exp//slog",
    ],
)

go_binary(
    name = "dummy",
    embed = [":dummy_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/lvjp/dummy/cmd.version": "{STABLE_GIT_COMMIT}",
    },
)

container_image(
    name = "image",
    base = "@ubuntu_base//image",
    cmd = [],
    entrypoint = ["/dummy"],
    files = [":dummy"],
    repository = "rg.fr-par.scw.cloud/dummy",
)
