load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "debug",
    srcs = [
        "endpoint.go",
        "instrumenting.go",
        "logging.go",
        "service.go",
        "transport.go",
    ],
    importpath = "github.com/lvjp/dummy/internal/pkg/service/debug",
    visibility = ["//:__subpackages__"],
    x_defs = {
        "github.com/lvjp/dummy/internal/pkg/service/debug.Version": "{STABLE_VERSION}",
        "github.com/lvjp/dummy/internal/pkg/service/debug.BuildTimestamp": "{BUILD_TIMESTAMP}",
    },
    deps = [
        "@com_github_go_kit_kit//endpoint",
        "@com_github_go_kit_kit//metrics",
        "@com_github_go_kit_kit//transport/http",
        "@org_golang_x_exp//slog",
    ],
)
